--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "express": "^4.19.2",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.13.0",
+        "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
         "nodemon": "^3.1.4"
     }
