--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "dependencies": {
         "axios": "^0.27.2",
         "bcrypt": "^5.1.1",
+        "cookie-parser": "^1.4.6",
+        "cors": "^2.8.5",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "geolib": "^3.3.4",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.13.0",
         "multer": "^1.4.5-lts.1",
