--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "dependencies": {
         "axios": "^0.27.2",
         "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
+        "crypto": "^1.0.1",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "geolib": "^3.3.4",
@@ -17,6 +19,7 @@
         "mongoose": "^6.13.0",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.9.14",
-        "nodemon": "^3.1.4"
+        "nodemon": "^3.1.4",
+        "razorpay": "^2.9.4"
     }
 }
