--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
         "geolib": "^3.3.4",
+        "git-filter-repo": "^0.0.30",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^6.13.0",
         "multer": "^1.4.5-lts.1",
